--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1109,6 +1109,8 @@ a {
   color: #767676 !important;
 }
 .cid-sedJZDhGFE {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
   background-color: #2299aa;
 }
 .cid-sedJZDhGFE .row {
@@ -1474,6 +1476,8 @@ a {
   }
 }
 .cid-seoMJjc2Bz {
+  padding-top: 90px;
+  padding-bottom: 90px;
   background-color: #efefef;
 }
 .cid-seoMJjc2Bz P {
