--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1541,6 +1541,7 @@ a {
 }
 .cid-seqH1EWOfq .mbr-step-text {
   color: #353535;
+  text-align: center;
 }
 .cid-seqJ403p2G {
   padding-top: 90px;
@@ -1806,7 +1807,7 @@ a {
   color: #353535;
 }
 .cid-sedYnyYZcc .mbr-timeline-date {
-  color: #232323;
+  color: #353535;
 }
 .cid-sedYnyYZcc .mbr-section-subtitle {
   color: #bbbbbb;
