--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1791,54 +1791,43 @@ a {
 .cid-sgjY17nzvT .user_text {
   color: #353535;
 }
-.cid-sgkCkqIWyV {
+.cid-sgnT97mP2p {
   padding-top: 6rem;
-  padding-bottom: 0rem;
+  padding-bottom: 1rem;
   background-color: #ffffff;
 }
-.cid-sgkCkqIWyV .top-line {
-  display: flex;
-  justify-content: space-between;
+.cid-sgnT97mP2p .content-wrapper {
+  background: #fafafa;
 }
-.cid-sgkCkqIWyV .mbr-section-title,
-.cid-sgkCkqIWyV .mbr-section-subtitle {
-  text-align: center;
-}
-.cid-sgkCkqIWyV .card:not(:nth-last-child(1)) {
-  margin-bottom: 2rem;
-}
-.cid-sgkCkqIWyV .card-wrapper {
-  border-radius: 4px;
-  background-color: #ffffff;
-}
-.cid-sgkCkqIWyV .image-wrapper img {
-  width: 100%;
-  object-fit: cover;
+@media (max-width: 991px) {
+  .cid-sgnT97mP2p .content-wrapper .row {
+    flex-direction: column-reverse;
+  }
+  .cid-sgnT97mP2p .content-wrapper .image-wrapper {
+    margin-bottom: 2rem;
+  }
 }
 @media (max-width: 767px) {
-  .cid-sgkCkqIWyV .card-box {
+  .cid-sgnT97mP2p .content-wrapper {
     padding: 1rem;
   }
 }
-@media (min-width: 768px) {
-  .cid-sgkCkqIWyV .card-box {
-    padding-right: 2rem;
+@media (min-width: 768px) and (max-width: 991px) {
+  .cid-sgnT97mP2p .content-wrapper {
+    padding: 2rem;
   }
 }
 @media (min-width: 992px) {
-  .cid-sgkCkqIWyV .card-box {
-    padding-left: 2rem;
-    padding-right: 4rem;
+  .cid-sgnT97mP2p .content-wrapper {
+    padding: 5rem 3rem;
+  }
+  .cid-sgnT97mP2p .content-wrapper .text-wrapper {
+    padding-right: 2rem;
   }
 }
-.cid-sgkCkqIWyV .mbr-section-title {
-  color: #2299aa;
-}
-.cid-sgkCkqIWyV .mbr-text {
-  color: #353535;
-}
-.cid-sgkCkqIWyV .card-title {
-  color: #353535;
+.cid-sgnT97mP2p .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
 }
 .cid-sgnRkC6SGn {
   padding-top: 2rem;
