--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -878,7 +878,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #2299aa;
 }
 .cid-seoMzHeQch button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2191,7 +2191,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #2299aa;
 }
 .cid-sgun1QzQVc button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2768,7 +2768,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #333333;
+  background-color: #2299aa;
 }
 .cid-sgurKhQJko button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
