--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3251,7 +3251,7 @@ a {
   color: #2299aa;
 }
 .cid-sgurKQCpnK .cost {
-  text-align: right;
+  text-align: center;
 }
 .cid-sgurKQCpnK .card-title {
   color: #353535;
