--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1001,16 +1001,16 @@ a {
   background: #2299aa;
 }
 .cid-seqvLNA52G .progress1 .progressbar-number:before {
-  content: '61';
+  content: '83';
 }
 .cid-seqvLNA52G .progress2 .progressbar-number:before {
-  content: '51';
+  content: '87';
 }
 .cid-seqvLNA52G .progress3 .progressbar-number:before {
-  content: '63';
+  content: '78';
 }
 .cid-seqvLNA52G .progress4 .progressbar-number:before {
-  content: '75';
+  content: '80';
 }
 .cid-seqvLNA52G .progress-primary {
   background: rgba(206, 206, 206, 0.4);
@@ -1668,13 +1668,13 @@ a {
   width: 100%;
 }
 .cid-sIeivMNU5E .navbar {
-  background: #ffffff;
+  background: #efefef;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-sIeivMNU5E .navbar-dropdown.bg-color.transparent.opened {
-  background: #ffffff;
+  background: #efefef;
 }
 .cid-sIeivMNU5E a {
   font-style: normal;
@@ -1765,7 +1765,7 @@ a {
   padding-bottom: 0;
 }
 .cid-sIeivMNU5E .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #efefef;
   visibility: hidden;
   display: block;
   position: absolute;
@@ -2245,13 +2245,13 @@ a {
   width: 100%;
 }
 .cid-sIeivMNU5E .navbar {
-  background: #ffffff;
+  background: #efefef;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-sIeivMNU5E .navbar-dropdown.bg-color.transparent.opened {
-  background: #ffffff;
+  background: #efefef;
 }
 .cid-sIeivMNU5E a {
   font-style: normal;
@@ -2342,7 +2342,7 @@ a {
   padding-bottom: 0;
 }
 .cid-sIeivMNU5E .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #efefef;
   visibility: hidden;
   display: block;
   position: absolute;
@@ -2971,13 +2971,13 @@ a {
   width: 100%;
 }
 .cid-sIeivMNU5E .navbar {
-  background: #ffffff;
+  background: #efefef;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-sIeivMNU5E .navbar-dropdown.bg-color.transparent.opened {
-  background: #ffffff;
+  background: #efefef;
 }
 .cid-sIeivMNU5E a {
   font-style: normal;
@@ -3068,7 +3068,7 @@ a {
   padding-bottom: 0;
 }
 .cid-sIeivMNU5E .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #efefef;
   visibility: hidden;
   display: block;
   position: absolute;
